--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.29.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
